--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "stripe": "^14.21.0",
+    "@stripe/stripe-js": "^2.4.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
