--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "sonner": "^1.5.0",
     "stripe": "^14.21.0",
     "@stripe/stripe-js": "^2.4.0",
+    "@stripe/react-stripe-js": "^2.4.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
